--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,23 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body{
+  margin: 0 10%;
+}
+
+h4{
+  font-size: 1rem;
+  color: grey;
+}
+
+h3{
+  font-size: 1.5rem;
+  color: grey;
+  line-height: 2.5rem;
+  margin: 2rem 0rem;
+}
+
+a{
+  color: grey;
+}
